fix: fix grid gap

--- a/src/pages/Dashboard/styles.scss
+++ b/src/pages/Dashboard/styles.scss
@@ -3,7 +3,7 @@
 	list-style: none;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	column-gap: 2rem;
+	gap: 2rem;
 	margin-bottom: 3rem;
 
 	li {
